--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -16,7 +16,8 @@ completion for Dirac fermion Dark Matter available to date.
 They provide kinematic distributions that 
 are unique to mono-boson signatures, and that in most cases 
 are not reproduced by an equivalent simplified model.\footnote{Wherever this is
-the case, we recommend only generation of simplified model result as that can be reinterpreted.}
+the case, we recommend only the generation of simplified model result as the results can be rescaled
+and reinterpreted.}
 
 A complete list of effective operators with direct DM/boson couplings for
 Dirac DM, up to dimension 7, can be found in~\cite{Cotta:2012nj, Carpenter:2012rg, Crivellin:2015wva}. 
@@ -24,18 +25,18 @@ Higher dimensional operators, up to dimension 8, leading to Higgs+\MET signature
 are mentioned in~\cite{Carpenter:2012rg, Berlin:2014cfa}. The first part of this Section outlines
 the main characteristics for a limited number of these models that could be 
 considered in Run-2 searches. 
-In the spirit of the Forum consensus to privilege simplified models,
-model-independent results as in Appendix~\ref{app:Presentation_Of_Experimental_Results} should be privileged
-over considering these operators as realistic benchmarks. We also recommend not to 
-optimize searches based on those benchmark models. 
+However, the EFT approximation made for these operators can be problematic, see Ref.~\ref{Berlin:2014cfa} for discussion.
+For this reason, model-independent results as in Appendix~\ref{app:Presentation_Of_Experimental_Results} 
+should be privileged over considering these operators as realistic benchmarks. 
+%We also recommend not to optimize searches based on those benchmark models. 
 
 However, another consideration that emerged from the Forum discussion was that the EFT approach allows
 more model-independence when reinterpreting results, making it worth still having
 results available in terms of these operators. Furthermore, once simplified models are available
 for those operators, EFT results can be used as a limiting case for consistency checks. 
-We devote the end of this Section to provide a recommendation on 
-how to present the results from this model, including an assessment of their  
-validity using a conservative procedure that is only dependent on EFT parameters.
+We devote the end of this Section to a discussion on the presentation of results 
+from this model, including an assessment of their reliability 
+using a conservative procedure that is only dependent on EFT parameters.
 
 %CD: what is this?
 %\newthought{Implementation discussed in the Appendix}
@@ -390,9 +391,9 @@ for these models are:
 
 \begin{itemize}
 \item Deliver fiducial limits on the cross section of any new physics events, without any model assumption, according to the guidelines in Appendix~\ref{app:Presentation_Of_Experimental_Results}.  
-\item Assess the percentage of events that pass the EFT validity condition, and present results using a truncation 
-of the invalid events using the procedure in Section~\ref{sec:EFTValidity} alongside pure EFT results;
+\item Assess the percentage of events that pass a condition of validity for the EFT approximation that only depends, and present results removing 
+of the invalid events using the procedure in Section~\ref{sec:EFTValidity} alongside the raw EFT results;
 \end{itemize}
 
-\newthought{Model implementation discussed in Appendix~\ref{}}
-\Todo{fix!}
+\newthought{The implementation for these models is discussed in Appendix~\ref{sub:EFTModels}.}
+
