--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -48,8 +48,14 @@ of EFTs with different spin structures. Provided that the contact
 interaction approximation holds, these EFTs can also provide a
 straightforward way to compare the results from different collider
 searches with non-collider searches for dark matter.  
+From the time of their proposal however it was clear that,
+ though the contact interactions provide interesting limits, 
+ they are not always a good description of dark matter production 
+ at the LHC in the regime of interest~\cite{Goodman:2010yf,Shoemaker:2011vi}. 
 
-The interpretation of some Run-1 LHC searches as constraints on contact interactions
+\Todo{Add experimental references if not done before}
+The interpretation of Tevatron~\ref{Aaltonen:2012jb} and Run-1 LHC~\ref{} searches
+as constraints on contact interactions
 provided results that were outside the range of applicability of the EFT
 description, requiring further study~\cite{Bai:2010hh,Kopp:2011eu,Fox:2011fx,Fox:2011pm,Shoemaker:2011vi,Busoni:2013lha}.
 Some ``simplified models'' \cite{Alwall:2008ag,Goodman:2011jq,Alves:2011wf}\Todo{CD: How are those references chosen?}
