--- a/doc/tex/Conclusions.tex
+++ b/doc/tex/Conclusions.tex
@@ -10,7 +10,7 @@ Points to be made in a conclusion\Todo{write the conclusion}:
 
 \item In the case of s-channel simplified models, in particular, there is complementarity between searches for dark matter and visible particles.   Thus, limits on invisible decays must be consistent with dijet and dilepton searches.  In the case of the mono-top simplified model, limits on visible single-top final states must be considered.
 
-\item There are many implicit assumptions that have not been laid out entirely in our presentation.   As stated earlier, the term ``dark matter' in this report refers to a putative dark matter candidate.
+\item There are many implicit assumptions that have not been laid out entirely in our presentation.   As stated earlier, the term \textit{dark matter} in this report refers to a putative dark matter candidate.
   The details of a particular mono-X analysis rely on the fact that a
   WIMP exists, and that it is collider-stable.   The observation of a
   signal consistent with WIMP production does can only provide indirect or confirming evidence of a dark matter particle.
