implemented Tom Rizzo's comments plus Steve's monoH
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@289 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2226,3 +2226,20 @@
       reportNumber   = "FERMILAB-PUB-14-289-A",
       SLACcitation   = "%%CITATION = ARXIV:1409.0042;%%",
 }
+
+
+@article{O'Connell:2006wi,
+	author         = "O'Connell, Donal and Ramsey-Musolf, Michael J. and Wise,
+	Mark B.",
+	title          = "{Minimal Extension of the Standard Model Scalar Sector}",
+	journal        = "Phys.Rev.",
+	volume         = "D75",
+	pages          = "037701",
+	doi            = "10.1103/PhysRevD.75.037701",
+	year           = "2007",
+	eprint         = "hep-ph/0611014",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CALT-68-2614",
+	SLACcitation   = "%%CITATION = HEP-PH/0611014;%%",
+}
