--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -159,6 +159,10 @@
 \label{app:Presentation_Of_Experimental_Results}
 \input{tex/Presentation_Of_Experimental_Results.tex}
 
+\chapter{Appendix: Additional details and studies within the Forum}
+\label{app:Additional_details}
+\input{tex/AdditionalDetails.tex}
+
 %%FIXME: it does not understand Collaboration. Fix here rather than hacking bib file?
 % \bibliographystyle{unsrtnat}
 \bibliographystyle{alpha}
