--- a/doc/symbols.tex
+++ b/doc/symbols.tex
@@ -39,6 +39,7 @@
 \newcommand{\ReftAbbrev}{\ensuremath{R}\xspace}
 \newcommand{\ttbarV}{\ensuremath{\ttbar V}\xspace}
 \newcommand{\Zprime}{\ensuremath{Z^\prime}\xspace}
+\newcommand{\Ztwo}{\ensuremath{\mathbb{Z}_2}\xspace}
 
 
 % \newcommand{\mx}{\ensuremath{m_{\rm DM}\xspace}}
