--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -149,7 +149,6 @@ No differences in the shape of the \MET distributions are observed between the s
 In the case of the on-shell Dark Matter pair production where $2\mDM\ll\mMed$, the cross sections of the pure vector and pure axial-vector models are similar. With increasing Dark Matter mass towards the $2\mDM=\mMed$ transition and beyond into the off-shell production regime, the relative difference between the cross sections of the two samples is increasing, with the vector samples having larger cross sections. 
 \Todo{This can be understood in the eikonal approximation since the A terms have an additional $v^2$ in front.}
 
-
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{figures/monojet/compareModels_VA_100.eps}
@@ -160,8 +159,7 @@ In the case of the on-shell Dark Matter pair production where $2\mDM\ll\mMed$, t
 Figure\,\ref{fig:monojet_scan_VA_mMed1000} shows the samples generated with pure and mixed couplings for $\mDM=100$~\gev and $\mMed=1\,\tev$, i.e. where the Dark Matter pair is produced on-shell. The mediator width between the pure vector and pure axial-vector couplings differ only by 2\% in this case, and $<10\%$ agreement between the cross sections is found. The mediator widths for the samples with the same type coupling to quarks agree at better than 1\% since the width is dominated by the quark contribution, as expected from
 Eq.\,\ref{eq:monojet_min}.
 %In the mediator rest frame, the angular distribution of the DM relative to the mediator direction of motion has the form $1+z^2+2*C*z$, where $z=\cos\theta$, with the second term only present in the mixed case, which may lead to acceptance differences.
-No significant differences between the samples with same type Dark Matter coupling are seen, given the statistical precision of the generated samples.
-This is expected since the mediator is produced on-shell, and the details of the invisible decay are unimportant.
+No significant differences between the samples with same type Dark Matter coupling are seen, given the statistical precision of the generated samples. This is expected since the mediator is produced on-shell, and the details of the invisible decay are unimportant in cut-and-count searches.
 
 For the off-shell Dark Matter pair production, shown in Fig.\,\ref{fig:monojet_scan_VA_mMed100} for $\mDM=100$~\gev and $\mMed=100$~\gev,
 there is approximately a factor 2 difference
